VPC.yaml
Resources:
  LampStack:
    Type: 'AWS::EC2::VPC'
    Properties:
      CidrBlock: "10.0.0.0/16"

  SubnetPublic:
    Type: 'AWS::EC2::Subnet'
    Properties:
      CidrBlock: "10.0.1.0/24"
      VpcId: !Ref LampStack

  SubnetPrivate:
    Type: 'AWS::EC2::Subnet'
    Properties:
      CidrBlock: "10.0.2.0/24"
      VpcId: !Ref LampStack

  RouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref LampStack

  Route:
   Type: AWS::EC2::Route
   Properties:
     DestinationCidrBlock: 0.0.0.0/0
     GatewayId: !Ref InternetGateway
     RouteTableId: !Ref RouteTable


  SubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:  !Ref RouteTable
      SubnetId: !Ref SubnetPublic

  InternetGateway:
    Type: 'AWS::EC2::InternetGateway'

  VPCGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId: !Ref InternetGateway
      VpcId: !Ref LampStack

  EC2Public:
    Type: 'AWS::EC2::Instance'
    Properties:
      ImageId: ami-0922553b7b0369273
      InstanceType: t2.micro
      SubnetId: !Ref SubnetPublic
      SecurityGroupIds: [!Ref SecurityGroup]

  EC2Private:
    Type: 'AWS::EC2::Instance'
    Properties:
      ImageId: ami-0922553b7b0369273
      InstanceType: t2.micro
      SubnetId: !Ref SubnetPrivate
      SecurityGroupIds: [!Ref SecurityGroup]

  SecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupName: "LampStackSG"
      GroupDescription: "CustomVPC SECURITY GROUP"
      SecurityGroupEgress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
      VpcId: !Ref LampStack
